# minisam_lib

./: CMakeLists.txt  LICENSE  README.md  SFMdata.h  gmfconfig.h  main.cpp  minisam.h  读我.md
base/: MatCal.h  Matrix.h  SVBlockMatrix.h
data/: isam2Wholeresult.txt  isam2realtimeb.txt
examples/BearingFactor/: BearingFactor.cpp
examples/KF/: EKF.cpp  KF_cholesky.cpp  KF_qr.cpp
examples/LeGO-LOAM/LeGO-LOAM/: CMakeLists.txt
examples/LeGO-LOAM/LeGO-LOAM/src/: mapOptmization.cpp
examples/LeGO-LOAM/LeGO-LOAM/src/cloud_msgs/: cloud_info.h
examples/imugpskitti/: imukittiexamplegps.cpp  imukittiexamplegps_Dogleg.cpp  imukittiexamplegps_Dogleg_Cholesky.cpp  imukittiexamplegps_Dogleg_QR.cpp  imukittiexamplegps_gaussiannewton.cpp  imukittiexamplegps_gaussiannewton_CHOLESKY.cpp  imukittiexamplegps_gaussiannewton_QR.cpp
examples/imugpskitti/data/: KittiGps_converted.txt
examples/locationexample/: locationexample_cholesky.cpp  locationexample_qr.cpp
examples/pose2slam/: Pose2SLAMExample_g2o.cpp  Pose2SLAMExample_gn_cholesky.cpp  Pose2SLAMExample_gn_qr.cpp
examples/pose3slam/: Pose3SLAMExample_g2o.cpp
examples/pppbayestree/: pppbayestree.cpp  pppbayestree_dogleg.cpp
examples/pppbayestree/configReader/: ConfDataReader.cpp  ConfDataReader.hpp
examples/pppbayestree/data/: phastball.conf  phastball.sp3  pppgpsposbackcount.txt
examples/pppbayestree/gnssNavigation/: FolderUtils.cpp  FolderUtils.h  GnssBetweenFactor.cpp  GnssBetweenFactor.h  GnssData.cpp  GnssData.h  GnssPostfit.cpp  GnssPostfit.h  GnssTools.cpp  GnssTools.h  PhaseFactor.cpp  PhaseFactor.h  PhysicalConstants.h  PseudorangeFactor.cpp  PseudorangeFactor.h  gnssStateVec.cpp  gnssStateVec.h  nonBiasStates.cpp  nonBiasStates.h
examples/pppbayestree/gpstk/: ANSITime.cpp  ANSITime.hpp  ARBase.cpp  ARBase.hpp  ARLambda.cpp  ARLambda.hpp  ARMLambda.cpp  ARMLambda.hpp  ARSimple.cpp  ARSimple.hpp  AllanDeviation.hpp  AlmOrbit.cpp  AlmOrbit.hpp  Antenna.cpp  Antenna.hpp  AntexReader.cpp  AntexReader.hpp  AstronomicalFunctions.cpp  AstronomicalFunctions.hpp  BDSEphemeris.cpp  BDSEphemeris.hpp  BDSEphemerisStore.cpp  BDSEphemerisStore.hpp  BDSWeekSecond.hpp  BLQDataReader.cpp  BLQDataReader.hpp  Bancroft.cpp  Bancroft.hpp  BaseDistribution.hpp  BasicFramework.cpp  BasicFramework.hpp  BasicModel.cpp  BasicModel.hpp  BinUtils.cpp  BinUtils.hpp  BinexData.cpp  BinexData.hpp  BinexFilterOperators.hpp  BinexStream.hpp  BivarStats.hpp  (+500 more)
examples/pppbayestree/robustModels/: PseudorangeMaxMix.cpp  PseudorangeMaxMix.h  PseudorangeSwitchFactor.cpp  PseudorangeSwitchFactor.h
examples/pppbayestree/slam/: dataset.cpp  dataset.h
examples/pppbayestree/utils/: CSVParser.cpp  CSVParser.h  csv.h
examples/rangeisam_plaza1/: RangeISAMExample_plaza1.cpp
examples/visualisam2/: SFMdata.h  visualisam2.cpp  visualisam2_gaussiannewton _QR.cpp  visualisam2_gaussiannewton.cpp  visualisam2dogleg _QR.cpp  visualisam2dogleg.cpp
examples_tuning/data/kittiresults/: isam2Wholeresult.txt  isam2realtime.txt
examples_tuning/finishedexamples/: bayestree.dot  imukittiexamplegps_pointer.cpp  teststructure.cpp  visualisam2pointer.cpp  visualsiam1pointer.cpp  visusalisam2doglegpointer.cpp
geometry/: CMakeLists.txt  Cal3Bundler.h  Cal3DS2_Base.h  Cal3Unified.h  Cal3_S2.h  Cal3_S2Stereo.h  CalibratedCamera.h  EssentialMatrix.h  OrientedPlane3.h  PinholeCameraCal3S2.h  PinholePoseCal3S2.h  Pose2.h  Pose3.h  Quaternion.h  Rot2.h  Rot3.h  SO3.h  SimpleCamera.h  StereoCamera.h  StereoPoint2.h  Unit3.h
inference/: BayesTree.h  BayesTreeCliqueBase.h  BayesTreeCliqueBasePointer.h  BayesTreePointer.h  ClusterTree.h  Conditional.h  EliminateableFactorGraph.h  EliminateableFactorPointerGraph.h  EliminationTree.h  Factor.h  FactorGraph.h  FactorPointerGraph.h  ISAMPointer.h  JunctionTree.h  JunctionTreePointer.h  Ordering.h  Symbol.h  SymbolicConditional.h  VariableIndex.h  VariableSlots.h
linear/: GaussianBayesNet.h  GaussianBayesNetPointer.h  GaussianConditional.h  GaussianDensity.h  GaussianFactorGraph.h  HessianFactor.h  JacobianFactor.h  KalmanFilter.h  NoiseModel.h  RealGaussianFactor.h  Scatter.h  mEstimator.h
mat/: GaussianBlockMatrix.h  MatCal.h  Matrix.h
miniblas/: memorypool.h  miniblas.h  minilinalg.h  minimatrix_double.h  minivector_double.h
navigation/: GPSFactor.h  ImuBias.h  ImuFactor.h  ManifoldPreintegration.h  NavState.h  PreintegratedRotation.h  PreintegrationBase.h  PreintegrationParams.h  TangentPreintegration.h
nonlinear/: DoglegOptimizer.h  DoglegOptimizerImpl.h  ExtendedKalmanFilter.h  GaussNewtonOptimizer.h  ISAM2-impl.h  ISAM2-implPointer.h  ISAM2.h  ISAM2Clique.h  ISAM2CliquePointer.h  ISAM2Data.h  ISAM2JunctionTree.h  ISAM2JunctionTreePointer.h  ISAM2Params.h  LevenbergMarquardtOptimizer.h  LevenbergMarquardtParams.h  LevenbergMarquardtState.h  LinearContainerFactor.h  LinearContainerFactorPose.h  Marginals.h  NonlinearFactor.h  NonlinearFactorGraph.h  NonlinearISAMPointer.h  NonlinearOptimizer.h  NonlinearOptimizerParams.h  NonlinearOptimizerState.h
slam/: BearingFactor.h  BearingRangeFactor.h  BetweenFactor.h  BetweenFactorPose2.h  BetweenFactorPose3.h  CMakeLists.txt  NonlinearEquality.h  PriorFactor.h  PriorFactorPose2.h  PriorFactorPose3.h  ProjectionFactor.h  RangeFactor.h  Sampler.h  StereoFactor.h  UnaryFactor.h  dataset.h
symbolic/: SymbolicConditional.h
